Update contrib manpage/example files

--- a/contrib/debian/examples/pivx.conf
+++ b/contrib/debian/examples/pivx.conf
@@ -1,7 +1,7 @@
 ##
 ## pivx.conf configuration file. Lines beginning with # are comments.
 ##
- 
+
 # Network-related settings:
 
 # Run on the test network instead of the real pivx network.
@@ -62,8 +62,8 @@
 #rpcpassword=YourSuperGreatPasswordNumber_DO_NOT_USE_THIS_OR_YOU_WILL_GET_ROBBED_385593
 
 # How many seconds pivx will wait for a complete RPC HTTP request.
-# after the HTTP connection is established. 
-#rpctimeout=30
+# after the HTTP connection is established.
+#rpcclienttimeout=30
 
 # By default, only RPC connections from localhost are allowed.
 # Specify as many rpcallowip= settings as you like to allow connections from other hosts,
@@ -73,7 +73,7 @@
 # because the rpcpassword is transmitted over the network unencrypted.
 
 # server=1 tells Pivx-QT to accept JSON-RPC commands.
-# it is also read by pivxd to determine if RPC should be enabled 
+# it is also read by pivxd to determine if RPC should be enabled
 #rpcallowip=10.1.1.34/255.255.255.0
 #rpcallowip=1.2.3.4/24
 #rpcallowip=2001:db8:85a3:0:0:8a2e:370:7334/96
@@ -84,16 +84,6 @@
 # You can use Pivx or pivxd to send commands to Pivx/pivxd
 # running on another host using this option:
 #rpcconnect=127.0.0.1
-
-# Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate
-# with Pivx -server or pivxd
-#rpcssl=1
-
-# OpenSSL settings used when rpcssl=1
-#rpcsslciphers=TLSv1+HIGH:!SSLv2:!aNULL:!eNULL:!AH:!3DES:@STRENGTH
-#rpcsslcertificatechainfile=server.cert
-#rpcsslprivatekeyfile=server.pem
-
 
 # Miscellaneous options
 
